welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:4: error: ')' expected but integer literal found.
  if (d<=2 ||  >=8){
                 ^nearTen:10: error: illegal start of simple expression
}
^